--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+ul {
+  list-style-type: none;
+
+  li {
+    display: inline;
+    padding: 10px 10px;
+    background-color: green;
+    color: white;
+  }
+}
